--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -16,10 +16,10 @@
       <tbody class="flex-1 sm:flex-none">
       {% for item in data %}
         <tr>
-          <th class="pl-2 truncate text-left">{{ item.name }}</th>
-          <td class="p-0">{{ item.period }}</td>
-          <td class="p-0">{{ item.date }}</td>
-          <td class="p-0 w-16 hidden sm:table-cell">{{ item.cost }}</td>
+          <th class="pl-2 border-0 truncate text-left">{{ item.name }}</th>
+          <td class="p-0 border-0">{{ item.period }}</td>
+          <td class="p-0 border-0">{{ item.date }}</td>
+          <td class="p-0 border-0 w-16 hidden sm:table-cell">{{ item.cost }}</td>
         </tr>
       {% endfor %}
       </tbody>
