Reduce footer height

--- a/website/templates/partials/footer.html
+++ b/website/templates/partials/footer.html
@@ -1,9 +1,7 @@
 <div class="footer footer-center bg-neutral-content py-4" style="position: fixed; bottom: 0; z-index: 11">
   <p class="text-gray-600 inline px-4">
     Copyright © 2022 Owen M. Jones. All rights reserved.<br/><br/>
-    MemberZone uses essential cookies for site functionality.
-    By continuing to use this site, you are agreeing to the use of these cookies.<br/>
-    For more information, see the
+    MemberZone uses essential cookies for site functionality. See the
     <a class="underline text-gray-500 hover:text-black" target="_blank" href="{% url 'terms-conditions' %}">terms & conditions</a>
     and
     <a class="underline text-gray-500 hover:text-black" target="_blank" href="{% url 'privacy-policy' %}">privacy policy</a>.
