Implement recaptcha on forms

--- a/website/templates/email-base.html
+++ b/website/templates/email-base.html
@@ -44,7 +44,7 @@
         <tr>
           <td style="text-align:center;">
             <p style="font-size:14px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">
-              &copy; <strong>{{ domain }}</strong></p>
+              <strong>{{ domain }} &copy; 2022 nomadiq software</strong></p>
           </td>
         </tr>
         <tr>
