--- a/website/templates/partials/contact-form.html
+++ b/website/templates/partials/contact-form.html
@@ -1,5 +1,6 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
+
 <div id="submit-success"
      class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative w-auto mx-auto"
      role="alert" style="display: none">
@@ -7,10 +8,11 @@
 </div>
 <form id="contact-form" method="post" hx-trigger="submit" hx-post="{% url 'submit-query' %}"
       _="on submitSuccess show #submit-success then wait 3s then hide #submit-success">
-  {% csrf_token %}
   <div class="flex-row gap-x-4 gap-y-0">
     {% crispy form %}
-    <button id="send-button" type="submit" class="btn btn-primary border-none">
+    <button id="send-button"
+            type="submit"
+            class="btn btn-primary border-none">
       Send
     </button>
   </div>
