--- a/website/templates/registration/password_reset.html
+++ b/website/templates/registration/password_reset.html
@@ -7,11 +7,14 @@
     <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none pt-8 place-items-center">
       <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center">
         <p class="p-4 text-center">Please enter your e-mail address to reset your password</p>
-        <form class="p-4 w-full" method="post">
+        <form id="reset-form" class="p-4 w-full" method="post">
           {% csrf_token %}
           {{ password_reset_form|crispy }}
           <div class="card-actions mt-4">
-            <input class="btn btn-primary" type="submit" name="submit" value="Reset password">
+            <input class="btn btn-primary"
+                   type="submit"
+                   name="submit"
+                   value="Reset password">
           </div>
         </form>
       </div>
