Add info to heading of renewal column

--- a/website/templates/memberships.html
+++ b/website/templates/memberships.html
@@ -28,7 +28,28 @@
         <tr class="text-left flex-1">
           <th>Membership</th>
           <th>Subscription</th>
-          <th>Renewal</th>
+          <th class="px-auto pt-1 pb-2.5">
+            Renewal
+            <div class="dropdown dropdown-end -ml-1">
+              <label tabindex="0" class="btn btn-circle btn-xs btn-ghost text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="w-4 h-4 stroke-current">
+                  <path stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
+                  </path>
+                </svg>
+              </label>
+              <div tabindex="0" class="card compact dropdown-content shadow bg-base-100 rounded-box" style="z-index: 12">
+                <div class="card-body w-56">
+                    <p class="normal-case font-normal">
+                        Renewal dates will be updated<br/>
+                        automatically at 12:00 UTC on<br/>
+                        the day of renewal.
+                    </p>
+                </div>
+              </div>
+            </div>
+          </th>
           <th class="px-0 pt-1 pb-2.5 hidden sm:table-cell">
             Reminders
             <div class="dropdown dropdown-end -ml-1">
